fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -20,53 +20,3 @@
   box-shadow: none;
   background-color: transparent;
 }
-
-.sub-tr-popup {
-  background: #262626;
-  border-radius: 3px;
-  position: fixed;
-  overflow: scroll;
-  z-index: 100000;
-}
-.sub-tr-popup.sub-tr-popup.sub-tr-popup.sub-tr-popup::-webkit-scrollbar {
-  width: auto;
-  background-color: transparent;
-}
-
-.sub-tr-popup-content {
-  padding: 16px;
-}
-
-.sub-tr-popup-content {
-  font-size: 14px;
-}
-
-.sub-tr-dict-item-text {
-  font-weight: bolder;
-}
-
-.sub-tr-dict-item-ts {
-  color: #b7b7b7;
-}
-
-.sub-tr-dict-item-pos {
-  color: #50b772;
-}
-
-.sub-tr-dict-meaning {
-  padding-left: 20px;
-  margin-top: 8px;
-  margin-bottom: 20px;
-}
-
-.sub-tr-dict-meaning-item {
-  padding: 2px 4px;
-}
-
-.sub-tr-loading {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
